docs: expand METRICS.md with node-level metrics, OJP JVM heap vs RSS, PG stats gaps
Agent-Logs-Url: https://github.com/rrobetti/ojp-performance-tester-tool/sessions/26a6ac96-af41-4c4e-8d22-3cdbbe68894f

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>